--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -304,7 +304,7 @@
                     </li>
                     <!-- Regular Link -->
                     <li class="hover:bg-blue-800 hover:text-white">
-                        <a href="/contact" class="relative block py-6 px-2 lg:p-6 text-sm lg:text-base font-bold">
+                        <a href="/login" class="relative block py-6 px-2 lg:p-6 text-sm lg:text-base font-bold">
                           <i class="fas fa-user"></i>
                         </a>
                     </li>
@@ -409,7 +409,7 @@
             </div>
             <div>
                 <div class="text-white pb-4">
-                    &copy; 2020 France et Moi. Tous droits réservés
+                    &copy; 2020 France et Moi. Tous droits réservés.
                 </div>
             </div>
         </div><!-- /Footer -->
