--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -326,9 +326,9 @@
                 <div class="md:flex bg-white rounded-lg p-6 shadow-lg m-4">
                     <img class="h-16 w-16 md:h-24 md:w-24 rounded-full mx-auto md:mx-0 md:mr-6" src="/images/avatar-eugeny.jpg">
                     <div class="text-center md:text-left">
-                        <h2 class="text-lg">
+                        <h4 class="text-base text-black leading-tight">
                           Евгений Пепеляев
-                        </h2>
+                        </h4>
                         <div class="text-blue-300">
                           Трансферы
                         </div>
@@ -344,9 +344,9 @@
                 <div class="md:flex bg-white rounded-lg p-6 shadow-lg m-4">
                     <img class="h-16 w-16 md:h-24 md:w-24 rounded-full mx-auto md:mx-0 md:mr-6" src="/images/avatar-dmitry.jpg">
                     <div class="text-center md:text-left">
-                        <h2 class="text-lg">
+                        <h4 class="text-base text-black leading-tight">
                           Дмитрий Мисуркин
-                        </h2>
+                        </h4>
                         <div class="text-blue-300">
                           Экскурсии
                         </div>
