--- a/views/partials/social/instagram.handlebars
+++ b/views/partials/social/instagram.handlebars
@@ -2,7 +2,9 @@
   {{#each partials.instagramContext.images}}
     <img class="w-full" src="{{imageUrl}}" alt="{{title}}">
     <div class="px-6 py-4">
-        <div class="text-xl mb-2">{{title}}</div>
+        <h4 class="text-xl text-black leading-tight">
+          {{title}}
+        </h4>
         <p class="text-gray-700 text-base">
           {{body}}
         </p>
