Add some content

--- a/views/castles-of-france.handlebars
+++ b/views/castles-of-france.handlebars
@@ -1,1 +1,76 @@
-<h1>Замки Франции</h1>
+<h1>
+  Замки Франции
+</h1>
+
+<ul class="lb-album">
+	<li>
+		<a href="#image-1">
+			<img src="images/castles-of-france/thumbs/castles-of-france-thumb-1.jpg" alt="thumb1">
+			<span>Cliquez ici</span>
+		</a>
+		<div class="lb-overlay" id="image-1">
+			<img src="images/castles-of-france/castles-of-france-1.jpg" alt="image1">
+			<div>
+				<h3>Франция <span>/France/</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+				<!-- a href="#image-10" class="lb-prev">Prev</a>
+				<a href="#image-2" class="lb-next">Next</a -->
+			</div>
+			<a href="#page" class="lb-close">x Close</a>
+		</div>
+	</li>
+</ul>
+
+<p>
+  На территории Франции более трех тысяч замков, большую часть которых мы можем вам показать.
+</p>
+<p>
+  Предлагаем не только экскурсионные программы, но и "погружение" - организацию и проведение в одном из них
+  мероприятий по вашему желанию.
+</p>
+
+<ul class="lb-album">
+	<li>
+		<a href="#image-2">
+			<img src="images/castles-of-france/thumbs/castles-of-france-thumb-2.jpg" alt="thumb2">
+			<span>Cliquez ici</span>
+		</a>
+		<div class="lb-overlay" id="image-2">
+			<img src="images/castles-of-france/castles-of-france-2.jpg" alt="image2">
+			<div>
+				<h3>Франция <span>/France/</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+				<!-- a href="#image-10" class="lb-prev">Prev</a>
+				<a href="#image-2" class="lb-next">Next</a -->
+			</div>
+			<a href="#page" class="lb-close">x Close</a>
+		</div>
+	</li>
+</ul>
+
+<p>
+  Основные замки для помещения:
+</p>
+<p>
+  <ul>
+    <li>
+      Вилландри с великолепными классическими садами
+    </li>
+    <li>
+      Шомон, где любопытны, а порой шокирующие, парки или вернее творения из национальной консерватории
+      садово-паркового искусства
+    </li>
+    <li>
+      Шамбор - "скромный охотничий" домик короля, состоящий из более чем четырех сотен комнат
+    </li>
+    <li>
+      Фонтенбло - с декорами XVI, XVII, XIX веков, с личном вещами и костюмами наполеоновского периода
+    </li>
+    <li>
+      Кемпер, таинственно зовущий своим отражением в озере Ланцелота
+    </li>
+    <li>
+      От Кенигсбор - розовый замок с бирюзовой кровлей, грозно смотрящий с предгорий на долину.
+    </li>
+  </ul>
+</p>
