--- a/views/family-holidays-in-france.handlebars
+++ b/views/family-holidays-in-france.handlebars
@@ -1,1 +1,35 @@
-<h1>Семейный отдых во Франции</h1>
+<h1>
+  Семейный отдых во Франции
+</h1>
+
+<p>
+  Франция предоставляет большие возможности для семейного активного отдыха:
+</p>
+<p>
+  <ul>
+    <li>
+      туристические программы
+    </li>
+    <li>
+      параплан (сами летаем)
+    </li>
+    <li>
+      байдарки (сами спускаемся по рекам)
+    </li>
+    <li>
+      рыбалка и охота (современная и как в старину)
+    </li>
+    <li>
+      ралли
+    </li>
+    <li>
+      самоходные баржи идущие по рекам и каналам (сами управляете, сами готовите, сами проходите шлюзы)
+    </li>
+    <li>
+      выходы в море со шкипером на современных парусниках и на старинных кораблях
+    </li>
+    <li>
+      гроты и пещеры (живем как троглодиты).
+    </li>
+  </ul>
+</p>
