--- a/views/france-for-children.handlebars
+++ b/views/france-for-children.handlebars
@@ -1,1 +1,130 @@
-<h1>Франция для детей</h1>
+<h1>
+  Франция для детей
+</h1>
+
+<p>
+  Дорогие гости нашей компании, посещая Францию с детьми можете быть уверены, что им будет интересно:
+</p>
+<p>
+  <ul>
+    <li>
+      всемирно известный парк Диснея
+    </li>
+    <li>
+      парк развлечений Астерикс
+    </li>
+    <li>
+      старинный город Провен с рыцарскими боями
+    </li>
+    <li>
+      Парк науки и техники Ля Вилет
+    </li>
+    <li>
+      Музей эволюции животного мира
+    </li>
+    <li>
+      Морской музей
+    </li>
+    <li>
+      Музей армии
+    </li>
+    <li>
+      детский мир в Булонском лесу
+    </li>
+    <li>
+      Эйфелева башня
+    </li>
+    <li>
+      Катакомбы под центром Парижа
+    </li>
+    <li>
+      парк Франция в миниатюре
+    </li>
+    <li>
+      Лувр глазами ребенка (фараоны и мумия, скульптуры и картины, мечи, шпаги и короны)
+    </li>
+    <li>
+      Музей магии
+    </li>
+    <li>
+      Конное шоу в замке Шантийи
+    </li>
+    <li>
+      замок героев Шарля Перро
+    </li>
+    <li>
+      Сафари-парк в Туари
+    </li>
+  </ul>
+</p>
+<p>
+  И это только в Париже! А во Франции еще 20 регионов и в каждом из них ваши дети не будут скучать.
+</p>
+<p>
+  Примеры:
+</p>
+<p>
+  <ul>
+    <li>
+      живем на деревьях или в пещерах троглодитов
+    </li>
+    <li>
+      ездим на старом паровозе
+    </li>
+    <li>
+      летаем на воздушных шарах, самолете или на вертолете над замками и горами
+    </li>
+    <li>
+      лазим как Тарзан по деревьями и знакомимся с жизнью обезьян
+    </li>
+    <li>
+      изучаем богатейшую коллекцию танков из разных стран
+    </li>
+    <li>
+      наблюдаем за ростом грибов
+    </li>
+    <li>
+      знакомимся с историей Франции в парке Пюи де Фу и на его красочном шоу
+    </li>
+    <li>
+      переходим в другие измерения в парке Футуроскоп
+    </li>
+    <li>
+      узнаем как работают осадные машины средневековых замков
+    </li>
+    <li>
+      сами готовим
+    </li>
+    <li>
+      изучаем жизнь животных на ферме
+    </li>
+    <li>
+      знакомимся с мастерами строящими настоящий замок, как в средневековье, или парусник-фрегат, как в
+      восемнадцатом веке
+    </li>
+    <li>
+      учимся в городке мастеров
+    </li>
+    <li>
+      спускаемся в гроты и знакомимся с рисунками древних людей и сталактитами и подземными озерами
+    </li>
+    <li>
+      путешествуем на каретах или олд мобилях
+    </li>
+    <li>
+      смотрим гоночные и олд автомобили
+    </li>
+    <li>
+      делаем сами духи как подмастерье парфюмера
+    </li>
+    <li>
+      катаемся на лыжах
+    </li>
+    <li>
+      выходим в море на настоящем корабле пиратов
+    </li>
+  </ul>
+</p>
+<p>
+  Предлагаем услуги квалифицированных нянь.
+</p>
