--- a/views/tasty-france.handlebars
+++ b/views/tasty-france.handlebars
@@ -1,1 +1,82 @@
-<h1>Вкусная Франция</h1>
+<h1>
+  Вкусная Франция
+</h1>
+
+<ul class="lb-album">
+	<li>
+		<a href="#image-1">
+			<img src="images/tasty-france/thumbs/tasty-france-thumb-1.jpg" alt="thumb1">
+			<span>Cliquez ici</span>
+		</a>
+		<div class="lb-overlay" id="image-1">
+			<img src="images/tasty-france/tasty-france-1.jpg" alt="image1">
+			<div>
+				<h3>Франция <span>/France/</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+				<!-- a href="#image-10" class="lb-prev">Prev</a>
+				<a href="#image-2" class="lb-next">Next</a -->
+			</div>
+			<a href="#page" class="lb-close">x Close</a>
+		</div>
+	</li>
+</ul>
+
+<p>
+  Гастрономические туры во Францию - поездки для гурманов:
+</p>
+<p>
+  <ul>
+    <li>
+      взгляд на Францию из бутылки
+    </li>
+    <li>
+      сбор трюфелей в Перигоре или в Оксеруа и дегустация их в блюдах
+    </li>
+    <li>
+      устрицы и мидии на атлантическом побережье: выход в море и осмотр плантаций
+    </li>
+    <li>
+      улитки в столице Бургундии
+    </li>
+    <li>
+      глоток Монбазияка с фуа гра в Сарлате
+    </li>
+    <li>
+      восьмидесятилетний кальвадос в Онфлере и розовое шампанское в Труа
+    </li>
+    <li>
+      глоток вина с сыром
+    </li>
+    <li>
+      сыры твердые, мягкие, из молока коров, коз, овец.
+    </li>
+  </ul>
+</p>
+<p>
+  Региональные особенности.
+</p>
+<p>
+  Фазы производства.
+</p>
+<p>
+  Легенды.
+</p>
+<p>
+  Сочетание вино и сыр:
+</p>
+<p>
+  <ul>
+    <li>
+      посещение с производств и знакомство с братствами
+    </li>
+    <li>
+      кулинарные курсы и уроки
+    </li>
+    <li>
+      посещение рынков и знакомство с продуктами
+    </li>
+    <li>
+      рекомендации и ориентирование по посещению "правильных мест" с "правильной" кухней.
+    </li>
+  </ul>
+</p>
