--- a/views/wine-tours.handlebars
+++ b/views/wine-tours.handlebars
@@ -1,1 +1,62 @@
-<h1>Винные туры</h1>
+<h1>
+  Винные туры
+</h1>
+
+<ul class="lb-album">
+	<li>
+		<a href="#image-1">
+			<img src="images/wine-tours/thumbs/wine-tours-thumb-1.jpg" alt="thumb1">
+			<span>Cliquez ici</span>
+		</a>
+		<div class="lb-overlay" id="image-1">
+			<img src="images/wine-tours/wine-tours-1.jpg" alt="image1">
+			<div>
+				<h3>Франция <span>/France/</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+				<!-- a href="#image-10" class="lb-prev">Prev</a>
+				<a href="#image-2" class="lb-next">Next</a -->
+			</div>
+			<a href="#page" class="lb-close">x Close</a>
+		</div>
+	</li>
+</ul>
+
+<p>
+  Винные дороги регионов:
+</p>
+<p>
+  <ul>
+    <li>
+      Бургундия
+    </li>
+    <li>
+      Бордо
+    </li>
+    <li>
+      Эльзас
+    </li>
+    <li>
+      Нормандия
+    </li>
+    <li>
+      Шампань
+    </li>
+    <li>
+      Коньяк
+    </li>
+    <li>
+      Луара
+    </li>
+  </ul>
+</p>
+<p>
+  Знакомство с производством, посещение погребов, выход на виноградники, дегустации любого уровня - от неофитов
+  до достигших определенных знаний в энологии, посещение братств и посвящение в послушники братства виноделов.
+</p>
+<p>
+  Вкус Франции только для вас: винные туры не выезжая из Парижа.
+</p>
+<p>
+  Напомним, согласно требованиям законодательства, что чрезмерное потребление алкоголя может вести к негативным
+  последствиям.
+</p>
