--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -38,7 +38,7 @@
     <label class="md:w-2/3 block text-gray-500 font-bold">
       <input class="mr-2 leading-tight" type="checkbox">
       <span class="text-sm">
-        Кликните если Вы не робот
+        Кликните, если Вы не робот
       </span>
     </label>
   </div>
