--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -10,7 +10,7 @@
       </label>
     </div>
     <div class="md:w-2/3">
-      <input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500" id="inline-name" name="name" type="text" value="Jane Doe" required>
+      <input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-blue-400" id="inline-name" name="name" type="text" value="Jane Doe" required>
     </div>
   </div>
   <div class="md:flex md:items-center mb-6">
@@ -20,7 +20,7 @@
       </label>
     </div>
     <div class="md:w-2/3">
-      <input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500" id="inline-email" name="email" type="text" value="janedoe@gmail.com" required>
+      <input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-blue-400" id="inline-email" name="email" type="text" value="janedoe@gmail.com" required>
     </div>
   </div>
   <div class="md:flex md:items-center mb-6">
@@ -30,13 +30,13 @@
       </label>
     </div>
     <div class="md:w-2/3">
-      <textarea rows="8" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500" id="inline-message" name="message" placeholder="Сообщение" required></textarea>
+      <textarea rows="8" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-blue-400" id="inline-message" name="message" placeholder="Сообщение" required></textarea>
     </div>
   </div>
   <div class="md:flex md:items-center mb-6">
     <div class="md:w-1/3"></div>
     <label class="md:w-2/3 block text-gray-500 font-bold">
-      <input class="mr-2 leading-tight" type="checkbox">
+      <input class="form-checkbox mr-2 leading-tight text-blue-400" type="checkbox" name="human" value="false" required>
       <span class="text-sm">
         Кликните, если Вы не робот
       </span>
