--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -3,6 +3,7 @@
 </h1>
 
 <form class="w-full max-w-lg m-auto mb-4" method="POST" action="/contact">
+  <input type="hidden" name="_csrf" value="{{_csrfToken}}">
   <div class="md:flex md:items-center mb-6">
     <div class="md:w-1/3">
       <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-name">
